# mathahordes

./: README.md
haskell/: Mathahordes.hs  README.md
haskell/mathahordes/: README.md  mathahordes.cabal  stack.yaml
haskell/mathahordes/src/: GamePlay.hs  Models.hs  Warmahordes.hs
haskell/mathahordes/test/: MeleeSpec.hs  ModelsSpec.hs  TiltSpec.hs  WarmahordesSpec.hs  WarmahordesTests.hs
python/: mathahordes.py  player.py  player_test.py
