name:                mathahordes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/smithhmark/mathahordes#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Smith
maintainer:          smith.h.mark@gmail.com
copyright:           value
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mathahordes
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
