name:                mathahordes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/smithhmark/mathahordes#readme
author:              Mark Smith
maintainer:          smith.h.mark@gmail.com
copyright:           value
category:            Simulation
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mathahordes
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mathahordes

library
  hs-source-dirs:      src
  exposed-modules:     Warmahordes
                     , Models
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite Warmahordes-hunitsuite
    Type:                 exitcode-stdio-1.0
    hs-source-dirs:       test
    main-is:              WarmahordesTests.hs
    default-language:     Haskell2010
    build-depends:        base >= 4.7 && < 5
                        , HUnit
                        , mathahordes

test-suite mathahordes-testsuite
    Type:                 exitcode-stdio-1.0
    hs-source-dirs:       test
    main-is:              Spec.hs
    default-language:     Haskell2010
    build-depends:        base >= 4.7 && < 5
                        , hspec
                        , mathahordes

